<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/cbBackground"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              tools:context="com.wonders.xlab.cardbag.ui.cardedit.CardEditActivity">

    <com.wonders.xlab.cardbag.widget.XToolBarLayout
        android:id="@+id/xtbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/XToolBarLayout"
        app:xtblTitleText="@string/cb_title_card_edit_add"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.wonders.xlab.cardbag.widget.RatioImageView
                    android:id="@+id/iv_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/round_corner_app_grey_bg"
                    style="@style/ImageViewScaleTypeStyle"
                    app:rivBaseDirection="horizontal"
                    app:rivHorizontalWeight="@integer/cbIvHorizontalWeight"
                    app:rivVerticalWeight="@integer/cbIvVerticalWeight"/>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="3"
                    android:background="@drawable/round_corner_app_grey_bg">

                    <EditText
                        android:id="@+id/et_card_name"
                        style="@style/NormalSizeBlackColorTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/iv_clear"
                        android:background="@android:color/transparent"
                        android:hint="@string/cb_please_input_card_name_hint"
                        android:maxLength="30"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:singleLine="true"/>

                    <ImageView
                        android:id="@+id/iv_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:paddingRight="8dp"
                        android:src="@drawable/ic_close"/>
                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cbDivider"/>

            <com.wonders.xlab.cardbag.widget.RatioImageView
                android:id="@+id/iv_bar_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="36dp"
                android:onClick="scanBarCode"
                android:scaleType="centerCrop"
                app:rivBaseDirection="horizontal"
                app:rivForegroundColor="@color/cbForegroundCover"
                app:rivForegroundCornerRadius="0dp"
                app:rivForegroundText="@string/cb_card_edit_cover_modify_bar_code"
                app:rivForegroundTextSize="@dimen/text_size_large"
                app:rivHorizontalWeight="3"
                app:rivVerticalWeight="1"/>

            <TextView
                android:id="@+id/tv_bar_code"
                style="@style/LargeSizeBlackColorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/cb_bar_code_place_holder"
                android:maxLines="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.wonders.xlab.cardbag.widget.RatioImageView
                    android:id="@+id/iv_card_front"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="shotCardFront"
                    style="@style/ImageViewScaleTypeStyle"
                    app:rivBaseDirection="horizontal"
                    app:rivForegroundColor="@color/cbForegroundCover"
                    app:rivForegroundText="@string/cb_card_edit_cover_modify_card_front"
                    app:rivForegroundTextSize="@dimen/text_size_large"
                    app:rivHorizontalWeight="@integer/cbIvHorizontalWeight"
                    app:rivVerticalWeight="@integer/cbIvVerticalWeight"/>

                <com.wonders.xlab.cardbag.widget.RatioImageView
                    android:id="@+id/iv_card_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="1"
                    android:onClick="shotCardBack"
                    style="@style/ImageViewScaleTypeStyle"
                    app:rivBaseDirection="horizontal"
                    app:rivForegroundColor="@color/cbForegroundCover"
                    app:rivForegroundText="@string/cb_card_edit_cover_modify_card_back"
                    app:rivForegroundTextSize="@dimen/text_size_large"
                    app:rivHorizontalWeight="@integer/cbIvHorizontalWeight"
                    app:rivVerticalWeight="@integer/cbIvVerticalWeight"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>

