<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_card_my_list"
        android:icon="@drawable/ic_menu_list"
        android:title="@string/cb_menu_card_my_list"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_card_my_icon"
        android:icon="@drawable/ic_menu_icon"
        android:title="@string/cb_menu_card_my_icon"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_card_my_delete"
        android:title="@string/cb_menu_card_my_delete"
        android:visible="false"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"/>
</menu>